--- a/.github/workflows/update-major-version-tags.yml
+++ b/.github/workflows/update-major-version-tags.yml
@@ -20,6 +20,9 @@ on:
         description: "Whether tags were successfully updated"
         value: ${{ jobs.update-tags.outputs.updated }}
 
+permissions:
+  contents: write
+
 jobs:
   update-tags:
     name: "🚀 Execute Tag Updates"
