fix(api): add logging for API URL in fetch requests fix(tag): remove unnecessary github_token input for upsert-batch action fix(workflow): ensure permissions are set for tag update workflows

--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -6,6 +6,9 @@ on:
     types: [published]
   push:
 
+permissions:
+  contents: write
+
 jobs:
   update-tags:
     name: "📌 Update Major Version Tags"
