--- a/.github/workflows/app-signed-tag-test.yml
+++ b/.github/workflows/app-signed-tag-test.yml
@@ -1,21 +1,25 @@
-name: App Tag (API-only, annotated)
+name: App Tag (signed, annotated, via App token)
 
 on:
   workflow_dispatch:
     inputs:
       tag_name:
-        description: "Tag name to (create or) move (annotated only; no lightweight)"
+        description: "Tag name to (create or) move (signed annotated)"
         default: "v-app-test"
+        required: true
+      tag_message:
+        description: "Tag message"
+        default: "Signed tag created/updated by CLDMV App workflow"
         required: true
 
 permissions:
   contents: write
 
 jobs:
-  tag_with_app_api:
+  tag_with_git_signed:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout (only to compute SHAs)
+      - name: Checkout (full history for tags)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -38,93 +42,103 @@ jobs:
         with:
           app-id: ${{ secrets.CLDMV_BOT_APP_ID }}
           private-key: ${{ secrets.CLDMV_BOT_APP_PRIVATE_KEY }}
-          # installation-id omitted (auto-detects the installation for this repo)
+          # installation-id omitted: auto-detects installation for this repo
 
-      - name: Ensure jq present
+      - name: Install gpg + jq
         run: |
           sudo apt-get update
-          sudo apt-get install -y jq
+          sudo apt-get install -y gnupg jq
 
-      - name: Create/Move annotated tag via Git Data API (App token)
-        id: tag_ops
+      - name: Import GPG private key
+        id: gpg
         env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
-          REPO: ${{ github.repository }}
-          TAG: ${{ inputs.tag_name }}
-          FIRST: ${{ steps.shas.outputs.first }}
-          LAST: ${{ steps.shas.outputs.last }}
-        shell: bash
+          GPG_PRIVATE_KEY: ${{ secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
+          GPG_PASSPHRASE: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
         run: |
           set -euo pipefail
 
-          GH="https://api.github.com/repos/${REPO}"
-          api() {
-            local method="$1" url="$2" data="${3:-}"
-            if [[ -n "$data" ]]; then
-              curl -sS -X "$method" \
-                   -H "Authorization: Bearer $GH_TOKEN" \
-                   -H "Accept: application/vnd.github+json" \
-                   "$url" -d "$data"
-            else
-              curl -sS -X "$method" \
-                   -H "Authorization: Bearer $GH_TOKEN" \
-                   -H "Accept: application/vnd.github+json" \
-                   "$url"
-            fi
-          }
+          mkdir -p ~/.gnupg
+          chmod 700 ~/.gnupg
 
-          echo "🔎 Does tag ref exist?"
-          REF_STATUS=$(curl -sS -o /tmp/ref.json -w "%{http_code}" \
-            -H "Authorization: Bearer $GH_TOKEN" \
-            -H "Accept: application/vnd.github+json" \
-            "${GH}/git/ref/tags/${TAG}" || true)
+          # Configure GPG for non-interactive use in CI
+          echo "use-agent" >> ~/.gnupg/gpg.conf
+          echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
+          echo "allow-loopback-pinentry" >> ~/.gnupg/gpg-agent.conf
+          gpgconf --kill gpg-agent || true
 
-          if [[ "$REF_STATUS" == "200" ]]; then
+          # Import the armored private key from secrets
+          printf '%s' "$GPG_PRIVATE_KEY" > /tmp/private.key
+          gpg --batch --yes --pinentry-mode loopback --passphrase "$GPG_PASSPHRASE" --import /tmp/private.key
+
+          echo "Imported secret keys:"
+          gpg --list-secret-keys --keyid-format LONG
+
+          # Capture the first secret key ID
+          KEYID="$(gpg --list-secret-keys --keyid-format LONG | awk '/^sec/{print $2}' | sed 's#.*/##' | head -n1)"
+          if [ -z "$KEYID" ]; then
+            echo "No secret key imported"; exit 1
+          fi
+          echo "keyid=$KEYID" >> "$GITHUB_OUTPUT"
+
+      - name: Configure Git identity & signing
+        id: gitcfg
+        env:
+          TAGGER_NAME: ${{ secrets.CLDMV_BOT_NAME }}
+          TAGGER_EMAIL: ${{ secrets.CLDMV_BOT_EMAIL }}
+        run: |
+          set -euo pipefail
+          KEYID="${{ steps.gpg.outputs.keyid }}"
+          git config user.name  "$TAGGER_NAME"
+          git config user.email "$TAGGER_EMAIL"
+          git config user.signingkey "$KEYID"
+          git config commit.gpgsign true
+          git config gpg.program gpg
+          echo "Using signing key: $KEYID as $TAGGER_NAME <$TAGGER_EMAIL>"
+
+      - name: Create or move SIGNED annotated tag locally
+        id: tagop
+        env:
+          TAG: ${{ inputs.tag_name }}
+          MSG: ${{ inputs.tag_message }}
+          FIRST: ${{ steps.shas.outputs.first }}
+          LAST: ${{ steps.shas.outputs.last }}
+          GPG_PASSPHRASE: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
+        run: |
+          set -euo pipefail
+
+          # Decide target (create at FIRST if missing, else move to HEAD)
+          if git rev-parse -q --verify "refs/tags/${TAG}" >/dev/null; then
             TARGET="$LAST"; MODE="move"
-            echo "ℹ️ Ref exists → will create NEW annotated tag object at HEAD and PATCH ref."
+            echo "Tag exists → moving to HEAD ($TARGET)"
           else
             TARGET="$FIRST"; MODE="create"
-            echo "ℹ️ Ref missing → will create annotated tag object at FIRST commit and CREATE ref."
-          fi
-          echo "🎯 Target commit: $TARGET"
-
-          echo "🧱 Creating annotated tag object (type=commit)"
-          TAG_OBJ_JSON=$(api POST "${GH}/git/tags" \
-            "$(jq -cn --arg tag "$TAG" \
-                         --arg msg "API tag $TAG -> $TARGET" \
-                         --arg obj "$TARGET" \
-               '{tag:$tag, message:$msg, object:$obj, type:"commit"}')")
-          echo "$TAG_OBJ_JSON" | jq . > /tmp/tag_obj.json
-
-          TAG_OBJ_SHA=$(jq -r '.sha' /tmp/tag_obj.json)
-          VERIFIED=$(jq -r '.verification.verified // "false"' /tmp/tag_obj.json)
-          REASON=$(jq -r '.verification.reason   // "unknown"' /tmp/tag_obj.json)
-
-          if [[ -z "$TAG_OBJ_SHA" || "$TAG_OBJ_SHA" == "null" ]]; then
-            echo "❌ Failed to create tag object"; cat /tmp/tag_obj.json; exit 1
+            echo "Tag missing → creating at FIRST commit ($TARGET)"
           fi
 
-          echo "📦 Tag object sha: $TAG_OBJ_SHA"
-          echo "🔐 verification.verified: $VERIFIED"
-          echo "🔐 verification.reason:   $REASON"
+          # Ensure GPG agent has passphrase via loopback (no TTY prompts)
+          export GPG_TTY=$(tty || true)
+          # Sign once to warm-up agent (ignore failure if not needed)
+          echo "$GPG_PASSPHRASE" | gpg --batch --yes --passphrase-fd 0 --pinentry-mode loopback \
+               --quick-sign-key "$(git config user.signingkey)" >/dev/null 2>&1 || true
 
-          if [[ "$MODE" == "create" ]]; then
-            echo "🧷 Creating tag REF → tag object"
-            CREATE_REF_JSON=$(api POST "${GH}/git/refs" \
-              "$(jq -cn --arg ref "refs/tags/${TAG}" --arg sha "$TAG_OBJ_SHA" \
-                 '{ref:$ref, sha:$sha}')")
-            echo "$CREATE_REF_JSON" | jq . > /tmp/create_ref.json
-          else
-            echo "✏️ Moving tag REF → NEW tag object (force)"
-            PATCH_REF_JSON=$(api PATCH "${GH}/git/refs/tags/${TAG}" \
-              "$(jq -cn --arg sha "$TAG_OBJ_SHA" '{sha:$sha, force:true}')")
-            echo "$PATCH_REF_JSON" | jq . > /tmp/patch_ref.json
-          fi
+          # Create/move a SIGNED annotated tag (-s); -f for move case
+          git tag -s -f -m "$MSG" "$TAG" "$TARGET"
 
-          # Outputs for the next step
-          echo "tag_object_sha=$TAG_OBJ_SHA" >> "$GITHUB_OUTPUT"
+          echo "pushed_tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "target_sha=${TARGET}" >> "$GITHUB_OUTPUT"
+          echo "mode=${MODE}" >> "$GITHUB_OUTPUT"
 
-      - name: Show verification (resolved from ref → tag object)
+      - name: Push tag using App installation token
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: |
+          set -euo pipefail
+          # Use the app token for pushing (attributed to the App)
+          git remote set-url origin "https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}"
+          # Force push in case we moved the tag
+          git push origin "refs/tags/${{ inputs.tag_name }}" --force
+
+      - name: Show verification via Git API (tag object)
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
           REPO: ${{ github.repository }}
@@ -138,6 +152,7 @@ jobs:
                            -H "Accept: application/vnd.github+json" \
                            "${GH}/git/ref/tags/${TAG}")
           echo "$REF_JSON" | jq . > /tmp/ref.json
+
           OBJ_SHA=$(jq -r '.object.sha'  /tmp/ref.json)
           OBJ_TY=$(jq -r '.object.type' /tmp/ref.json)
           echo "Ref → $OBJ_TY $OBJ_SHA"
@@ -149,5 +164,5 @@ jobs:
             echo "$TAG_JSON" | jq .
             echo "::notice title=Verification::.verification=$(echo "$TAG_JSON" | jq -c '.verification')"
           else
-            echo "Note: ref is not pointing to a tag object (unexpected for this flow)."
+            echo "Note: ref is not pointing to a tag object (unexpected)."
           fi
