--- a/.github/workflows/app-signed-tag-test.yml
+++ b/.github/workflows/app-signed-tag-test.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           app-id: ${{ secrets.CLDMV_BOT_APP_ID }}
           private-key: ${{ secrets.CLDMV_BOT_APP_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
           # installation-id omitted: auto-detects installation for this repo
 
       - name: Install gpg + jq
