refactor(tag): streamline input definitions and remove unused parameters

--- a/.github/workflows/update-major-version-tags.yml
+++ b/.github/workflows/update-major-version-tags.yml
@@ -35,10 +35,6 @@ on:
         description: "Passphrase for the private key (if protected)"
         required: false
         type: string
-        description: "Whether to create/update VERSION_TAGS.md documentation"
-        required: false
-        type: boolean
-        default: true
     outputs:
       major-version:
         description: "The major version tag that was updated"
@@ -77,9 +73,5 @@ jobs:
           annotate: ${{ inputs.annotate }}
           tagger_name: ${{ inputs.tagger_name || secrets.CLDMV_BOT_NAME }}
           tagger_email: ${{ inputs.tagger_email || secrets.CLDMV_BOT_EMAIL }}
-          gpg_private_key: ${{ inputs.gpg_private_key }}
-          gpg_passphrase: ${{ inputs.gpg_passphrase }}
-          CLDMV_BOT_GPG_PASSPHRASE: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
-          CLDMV_BOT_NAME: ${{ secrets.CLDMV_BOT_NAME }}
-          CLDMV_BOT_EMAIL: ${{ secrets.CLDMV_BOT_EMAIL }}
-
+          gpg_private_key: ${{ inputs.gpg_private_key || secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
+          gpg_passphrase: ${{ inputs.gpg_passphrase || secrets.CLDMV_BOT_GPG_PASSPHRASE }}
