--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -1,26 +1,43 @@
-# This repository's workflow to update version tags
-name: 🏷️ Update Version Tags
+name: 🏷️ Update Version Tags (Caller)
 
 on:
-  release:
-    types: [published]
-  push:
+  workflow_dispatch:
+    inputs:
+      use_gpg:
+        description: "Use GPG signing via CLDMV_ secrets?"
+        type: boolean
+        required: true
+        default: false
+      sign:
+        description: "sign mode: auto | true | false"
+        required: false
+        default: "auto"
+      annotate:
+        description: "annotate mode: auto | true | false"
+        required: false
+        default: "auto"
+      create_documentation:
+        description: "Create/update VERSION_TAGS.md"
+        required: false
+        default: "true"
 
 permissions:
   contents: write
 
 jobs:
   update-tags:
-    name: "📌 Update Major Version Tags"
     uses: ./.github/workflows/update-major-version-tags.yml
     permissions:
-      contents: write # (optional) also set at the job
-    secrets: inherit # <-- valid here (caller side)
+      contents: write
     with:
-      create_documentation: true
-      sign: auto
-      annotate: auto
-      tagger_name: ${{ secrets.CLDMV_BOT_NAME }}
-      tagger_email: ${{ secrets.CLDMV_BOT_EMAIL }}
-      gpg_private_key: ${{ secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
-      gpg_passphrase: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
+      create_documentation: ${{ inputs.create_documentation }}
+      sign: ${{ inputs.sign }}
+      annotate: ${{ inputs.annotate }}
+      # let the reusable decide whether to use secrets based on this flag
+      use_gpg: ${{ inputs.use_gpg }}
+    secrets:
+      # map your repo/org secrets into generic names expected by the reusable
+      TAGGER_NAME: ${{ secrets.CLDMV_BOT_NAME }}
+      TAGGER_EMAIL: ${{ secrets.CLDMV_BOT_EMAIL }}
+      GPG_PRIVATE_KEY: ${{ secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
+      GPG_PASSPHRASE: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
