feat(workflow): change default GPG signing input to true

--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -7,7 +7,7 @@ on:
         description: "Use GPG signing via CLDMV_ secrets?"
         type: boolean
         required: true
-        default: false
+        default: true
       sign:
         description: "sign mode: auto | true | false"
         required: false
