--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -33,11 +33,11 @@ jobs:
     permissions:
       contents: write
     with:
-      create_documentation: ${{ inputs.create_documentation || 'true' }}
+      create_documentation: ${{ inputs.create_documentation || true }}
       sign: ${{ inputs.sign || 'auto' }}
       annotate: ${{ inputs.annotate || 'auto' }}
       # let the reusable decide whether to use secrets based on this flag
-      use_gpg: ${{ inputs.use_gpg != false }}
+      use_gpg: ${{ inputs.use_gpg || true }}
     secrets:
       # map your repo/org secrets into generic names expected by the reusable
       TAGGER_NAME: ${{ secrets.CLDMV_BOT_NAME }}
